--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "homepage": "https://github.com/steve970/weather_app_for_dogs#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "request": "^2.81.0"
   }
 }
